--- a/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
@@ -11,7 +11,7 @@ AssessmentScreen As screen:
                 UserLastNavigatedTime,
                 Now(),
                 Seconds
-            ) > 600,
+            ) > SafetyCheckTime,
             Set(
                 safetyPopup,
                 true
@@ -469,7 +469,7 @@ AssessmentScreen As screen:
                                     UserLastNavigatedTime,
                                     Now(),
                                     Seconds
-                                ) > 600,
+                                ) > SafetyCheckTime,
                                 Set(
                                     safetyPopup,
                                     true
@@ -742,7 +742,7 @@ AssessmentScreen As screen:
                                     UserLastNavigatedTime,
                                     Now(),
                                     Seconds
-                                ) > 600,
+                                ) > SafetyCheckTime,
                                 Set(
                                     safetyPopup,
                                     true
@@ -1134,7 +1134,7 @@ AssessmentScreen As screen:
                                     UserLastNavigatedTime,
                                     Now(),
                                     Seconds
-                                ) > 600,
+                                ) > SafetyCheckTime,
                                 Set(
                                     safetyPopup,
                                     true
@@ -1314,7 +1314,7 @@ AssessmentScreen As screen:
                                     UserLastNavigatedTime,
                                     Now(),
                                     Seconds
-                                ) > 600,
+                                ) > SafetyCheckTime,
                                 Set(
                                     safetyPopup,
                                     true
