--- a/Dev2AssessorApp/Src/DashboardScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/DashboardScreen.fx.yaml
@@ -1,7 +1,7 @@
 DashboardScreen As screen:
     OnVisible: |-
         =
-        Set(LogOutTimer, -1800);
+        //Set(LogOutTimer, -1800);
         Set(varPatchTimer,false);
         UpdateIf(
                 gcProjectAssignment,
@@ -650,11 +650,10 @@ DashboardScreen As screen:
         ZIndex: =5
 
     tmr_logout As timer:
-        AutoStart: =true
+        AutoStart: =//true
         Duration: =//30000
         OnTimerEnd: =
         OnTimerStart: =true
-        Visible: =false
         X: =20
         Y: =20
         ZIndex: =14
